# ExoPlayer

./: core_settings.gradle  gradle.properties
extensions/ffmpeg/: build.gradle
extensions/ffmpeg/ndklibyuv/: build.gradle
extensions/ffmpeg/src/main/jni/: CMakeLists.txt  build_ffmpeg.sh  ffmpeg_jni.cc
